<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/hotel5"
    tools:context=".SelesaiPesananActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center_horizontal">

            <TextView
                android:id="@+id/registerClickable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lihat_pesanan"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/magenta" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/tampilan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/staticNamaHotel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="left"
                android:text="@string/id_pesanan"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"

                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/idPesanan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/staticNamaHotel"
                android:text="@string/textview"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/staticLokasi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/staticNamaHotel"
                android:layout_marginTop="20dp"
                android:text="@string/biaya"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/biaya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/idPesanan"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/staticNamaHotel"
                android:text="@string/textview"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/staticHari"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/staticLokasi"
                android:layout_marginTop="20dp"
                android:text="@string/jumlah_hari"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/hari"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/biaya"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/staticNamaHotel"
                android:text="@string/textview"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/staticTanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/staticHari"
                android:layout_marginTop="20dp"
                android:text="@string/tanggal"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tanggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/hari"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"

                android:layout_toEndOf="@id/staticNamaHotel"
                android:text="@string/textview"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp" />

            <Button
                android:id="@+id/batal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tanggal"
                android:layout_marginTop="40dp"
                android:background="@color/orange"
                android:text="@string/batal"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <Button
                android:id="@+id/selesai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tanggal"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_toEndOf="@id/batal"
                android:background="@color/orange"
                android:text="@string/selesai"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <Button
                android:id="@+id/kembali"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/batal"
                android:layout_marginTop="20dp"
                android:layout_marginStart="60dp"
                android:text="@string/kembali"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:background="@color/orange"/>

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
